<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fruit.salerapplication.MainActivity">

    <include layout="@layout/titlebar"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_tab_fruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/tab_menu_fruit"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/column_fruits_management"
            android:textColor="@drawable/tab_menu_text" />

        <Button
            android:id="@+id/btn_tab_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/tab_menu_order"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/column_order_management"
            android:textColor="@drawable/tab_menu_text" />

        <Button
            android:id="@+id/btn_tab_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/tab_menu_setting"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/column_saler_setting"
            android:textColor="@drawable/tab_menu_text" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_menu"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include">
    </android.support.v4.view.ViewPager>

</RelativeLayout>