<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/setting_store_info_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|left"
            android:text="@string/setting_store_info"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_bank_account_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|left"
            android:text="@string/setting_bank_account"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_account_management_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|left"
            android:text="@string/setting_account_management"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/borderLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|left"
            android:text="@string/setting_auto_take"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/setting_auto_take_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|left"
            android:text="@string/setting_message_reminder"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/setting_message_reminder_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>