<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar"
        android:id="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_name"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_realname"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_realname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_phone"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="phone"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_email"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="发送验证码"
            android:textSize="18sp"
            android:textColor="@color/textGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/forget_password_code"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_password"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_account_management_password_confirm"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="注册"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>