<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar"
        android:id="@+id/include" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_store_info_name"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/setting_store_info_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_store_info_address"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/setting_store_info_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_store_info_chargeman"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/setting_store_info_chargeman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_store_info_phone"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/setting_store_info_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/setting_store_info_description"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/setting_store_info_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                android:textColor="@color/textGrey"
                android:text="fadfdasfsd" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="保存"
            android:textSize="18sp"
            android:textColor="@color/textGrey"/>

    </LinearLayout>

</LinearLayout>