<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/forget_password_name"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/forget_password_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/forget_password_email"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/forget_password_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="发送验证码"
            android:textSize="18sp"
            android:textColor="@color/textGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/forget_password_password"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/forget_password_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/forget_password_password_confirm"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/forget_password_password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/textGrey"
                android:text="Name" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="修改密码"
            android:textSize="18sp"
            android:textColor="@color/textGrey"/>

    </LinearLayout>

</LinearLayout>