<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar"
        android:id="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/change_password_old"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/change_password_old"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/change_password_new"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/change_password_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/change_password_new_confirm"
                android:textColor="@color/textDarkGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/change_password_old_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="fadfdasfsd"
                android:textColor="@color/textGrey" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_basic"
            android:text="确认"
            android:textSize="18sp"
            android:textColor="@color/textGrey"/>

    </LinearLayout>

</LinearLayout>